// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fbQvhO"
  id={null}
  rows={null}
>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 jzhkTB"
    fontSize="0.68em"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="1px"
  >
    Label
  </label>
  <a
    className="Typography__LinkText-sc-19auepv-1 eTJmhB"
    disabled={false}
    fontSize="0.876em"
    fontWeight={600}
    href={null}
    letterSpacing="0px"
    onClick={null}
    target={null}
  >
    Link
  </a>
  <p
    className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
    fontSize="1em"
    fontWeight={400}
    id={null}
    letterSpacing="0px"
  >
    Text
  </p>
  <h3
    className="Typography__TitleText-sc-19auepv-2 kcuwPy"
    fontSize="1.45em"
    fontWeight={500}
    letterSpacing="0px"
  >
    Title
  </h3>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 caSwqL"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 hnkIsT"
      fontSize="0.65em"
      fontWeight={400}
      id={null}
      letterSpacing="0.6px"
    >
      XSmall Text
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 BMTkE"
      fontSize="0.75em"
      fontWeight={400}
      id={null}
      letterSpacing="0.4px"
    >
      Small Text
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iHWhme"
      fontSize="0.879em"
      fontWeight={400}
      id={null}
      letterSpacing="0.2px"
    >
      Normal Text
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
      fontSize="1em"
      fontWeight={400}
      id={null}
      letterSpacing="0px"
    >
      Large Text
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <h6
      className="Typography__TitleText-sc-19auepv-2 gDyDyY"
      fontSize="1em"
      fontWeight={400}
      letterSpacing="0px"
    >
      Normal Title
    </h6>
    <h5
      className="Typography__TitleText-sc-19auepv-2 PRpBC"
      fontSize="1.15em"
      fontWeight={400}
      letterSpacing="0px"
    >
      Large Title
    </h5>
    <h4
      className="Typography__TitleText-sc-19auepv-2 kljEwZ"
      fontSize="1.25em"
      fontWeight={400}
      letterSpacing="0px"
    >
      XLarge Title
    </h4>
    <h3
      className="Typography__TitleText-sc-19auepv-2 bPwSan"
      fontSize="1.45em"
      fontWeight={400}
      letterSpacing="0px"
    >
      2XLarge Title
    </h3>
    <h2
      className="Typography__TitleText-sc-19auepv-2 bFxbmp"
      fontSize="1.65em"
      fontWeight={400}
      letterSpacing="0px"
    >
      3XLarge Title
    </h2>
    <h1
      className="Typography__TitleText-sc-19auepv-2 jZyddv"
      fontSize="2em"
      fontWeight={400}
      letterSpacing="0px"
    >
      4XLarge Title
    </h1>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jzhkTB"
      fontSize="0.68em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
    >
      XSmall Label
    </label>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 RzJFI"
      fontSize="0.82em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Small Label
    </label>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Normal Label
    </label>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 kWqyoM"
      fontSize="1em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0px"
    >
      Large Label
    </label>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <a
      className="Typography__LinkText-sc-19auepv-1 eTJmhB"
      disabled={false}
      fontSize="0.876em"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Normal Link
    </a>
    <a
      className="Typography__LinkText-sc-19auepv-1 hGkuqN"
      disabled={false}
      fontSize="1.15em"
      fontWeight={600}
      href={null}
      letterSpacing="0.2px"
      onClick={null}
      target={null}
    >
      Large Link
    </a>
    <a
      className="Typography__LinkText-sc-19auepv-1 cnLHpC"
      disabled={false}
      fontSize="1.25em"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      XLarge Link
    </a>
    <a
      className="Typography__LinkText-sc-19auepv-1 eIgJvk"
      disabled={false}
      fontSize="1.45em"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      XXLarge Link
    </a>
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 caSwqL"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fSxzat"
      fontSize="0.879em"
      fontWeight={300}
      id={null}
      letterSpacing="0.2px"
    >
      Light Text
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iHWhme"
      fontSize="0.879em"
      fontWeight={400}
      id={null}
      letterSpacing="0.2px"
    >
      Regular Text
    </p>
    <p
      className="Typography__Paragraph-sc-19auepv-3 bxdsLc"
      fontSize="0.879em"
      fontWeight={600}
      id={null}
      letterSpacing="0.2px"
    >
      Bold Text
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <h6
      className="Typography__TitleText-sc-19auepv-2 erbTlz"
      fontSize="1em"
      fontWeight={300}
      letterSpacing="0px"
    >
      Light Title
    </h6>
    <h6
      className="Typography__TitleText-sc-19auepv-2 gDyDyY"
      fontSize="1em"
      fontWeight={400}
      letterSpacing="0px"
    >
      Regular Title
    </h6>
    <h6
      className="Typography__TitleText-sc-19auepv-2 gymxyt"
      fontSize="1em"
      fontWeight={500}
      letterSpacing="0px"
    >
      Bold Title
    </h6>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gzGhsl"
      fontSize="0.879em"
      fontWeight={300}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Light Label
    </label>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hskbRy"
      fontSize="0.879em"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Regular Label
    </label>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 jvANIo"
      fontSize="0.879em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0.4px"
    >
      Bold Label
    </label>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
    id={null}
    rows={null}
  >
    <a
      className="Typography__LinkText-sc-19auepv-1 dzmSHo"
      disabled={false}
      fontSize="0.876em"
      fontWeight={300}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Light Link
    </a>
    <a
      className="Typography__LinkText-sc-19auepv-1 eTJmhB"
      disabled={false}
      fontSize="0.876em"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Regular Link
    </a>
    <a
      className="Typography__LinkText-sc-19auepv-1 eTJmhB"
      disabled={false}
      fontSize="0.876em"
      fontWeight={600}
      href={null}
      letterSpacing="0px"
      onClick={null}
      target={null}
    >
      Bold Link
    </a>
  </section>
</section>
`;
